--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 
 :root {
   --text-color: #ffffff;
-  --background-color: #281154;
+  --background-color: #270082;
   --red-btn-color: #ff0000;
 }
 
@@ -291,7 +291,7 @@ html {
 
 .white-box > div > button {
   background-color: var(--background-color);
-  padding: 1rem;
+  padding: 2rem;
   color: var(--text-color);
   font-size: 2rem;
   font-family: "Josefin Sans", sans-serif;
@@ -300,6 +300,7 @@ html {
 }
 /* The movie and TV collection ended */
 
+/* third-last-container started */
 .third-last-container {
   background-image: url("https://mytunes-322.web.app/images/video.png");
   background-repeat: no-repeat;
@@ -316,15 +317,16 @@ html {
   text-align: center;
   padding-top: 3rem;
   padding-bottom: 25rem;
+  line-height: 35px;
 }
 @media (max-width: 377px) {
   .third-last-container > h3 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 }
 @media (max-width: 533px) {
   .third-last-container > h3 {
-    font-size: 3.5rem;
+    font-size: 3rem;
   }
 }
 @media (max-width: 745px) {
@@ -337,4 +339,58 @@ html {
     font-size: 4.5rem;
   }
 }
+/* third-last-container ended */
+
+/* card-container started */
+.card-container {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 8rem;
+  padding-bottom: 5rem;
+}
+.image-card img {
+  width: 100%;
+}
+.text > h2 {
+  font-size: 4rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  text-align: center;
+  padding: 3rem;
+}
+.text > p {
+  font-size: 2rem;
+  text-align: center;
+  width: 50rem;
+  font-family: "Josefin Sans", sans-serif;
+  line-height: 20px;
+}
+.text > h6 {
+  font-size: 2rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  text-align: center;
+  padding: 3rem;
+  font-weight: 500;
+}
+.text > div {
+  text-align: center;
+}
+.text > div > button {
+  background-color: var(--background-color);
+  padding: 2rem;
+  color: var(--text-color);
+  font-size: 2rem;
+  font-family: "Josefin Sans", sans-serif;
+  border: none;
+  border-radius: 10px;
+}
+@media (max-width: 1035px) {
+  .card-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+/* card-container ended */
 /* main container ended */
